--- a/metadata.yaml
+++ b/metadata.yaml
@@ -16,5 +16,5 @@ requires:
   oidc-client:
     interface: oidc-client
   service-mesh:
-    interface: service-mesh
+    interface: service-mesh-ops
 min-juju-version: 2.8.6
