--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,6 +15,8 @@ resources:
 requires:
   oidc-client:
     interface: oidc-client
-  service-mesh:
-    interface: service-mesh-ops
+  ingress:
+    interface: ingress
+    schema: https://raw.githubusercontent.com/canonical/operator-schemas/service-mesh-schemas/ingress.yaml
+    versions: [v1]
 min-juju-version: 2.8.6
