--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git+https://github.com/juju-solutions/resource-oci-image
+oci-image==1.0.0
 ops==1.1.0
-git+https://github.com/canonical/interface-service-mesh
+serialized-data-interface==0.2.0
