--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,6 +15,8 @@ resources:
 requires:
   oidc-client:
     interface: oidc-client
+    schema: https://raw.githubusercontent.com/canonical/operator-schemas/oidc-schemas/oidc-client.yaml
+    versions: [v1]
   ingress:
     interface: ingress
     schema: https://raw.githubusercontent.com/canonical/operator-schemas/service-mesh-schemas/ingress.yaml
