Add integration tests with Pytest Operator

--- a/tox.ini
+++ b/tox.ini
@@ -21,11 +21,9 @@ commands = pytest -v --tb native -s {posargs} {toxinidir}/tests/unit
 
 [testenv:integration]
 deps =
-    # Until 2.8.6 is released
-    https://github.com/juju/python-libjuju/archive/master.zip#egg=juju
+    juju
     pytest
-    git+https://github.com/charmed-kubernetes/pytest-operator.git@loop
-    # pytest-operator 
+    pytest-operator
 commands = pytest -v --tb native --show-capture=no --log-cli-level=INFO -s {posargs} {toxinidir}/tests/integration
 
 [testenv:lint]
