--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -38,25 +38,15 @@ jobs:
           pip install tox
       - name: Run test
         run: tox -e unit
-        #  Integration Tests won't be executed for now as there are still some
-        #  issues with pytest-operator and k8s charms.
-        #
-        #  integration-test:
-        #    name: Integration tests
-        #    runs-on: ubuntu-latest
-        #    steps:
-        #      - name: Check out code
-        #        uses: actions/checkout@v2
-        #      - name: Setup Python
-        #        uses: actions/setup-python@v2
-        #        with:
-        #          python-version: 3.8
-        #      - name: Install Dependencies
-        #        run: |
-        #          pip install tox
-        #      - name: Setup operator environment
-        #        uses: charmed-kubernetes/actions-operator@master
-        #        with:
-        #            provider: microk8s
-        #      - name: Run test
-        #        run: tox -e integration -- -m container
+  integration-test:
+    name: Integration tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Setup operator environment
+        uses: charmed-kubernetes/actions-operator@master
+        with:
+            provider: microk8s
+      - name: Run test
+        run: tox -e integration
