--- a/tox.ini
+++ b/tox.ini
@@ -10,26 +10,26 @@ envlist = lint,unit,integration
 setenv =
     PYTHONPATH={toxinidir}:{toxinidir}/src
     PYTHONBREAKPOINT=ipdb.set_trace
+deps =
+    -r{toxinidir}/test-requirements.txt
+    -r{toxinidir}/requirements.txt
+allowlist_externals =
+    charmcraft
 
 [testenv:unit]
-deps =
-    pyyaml
-    pytest
-    bcrypt
-    -r{toxinidir}/requirements.txt
 commands = pytest -v --tb native -s {posargs} {toxinidir}/tests/unit
 
 [testenv:integration]
 deps =
-    juju
-    pytest
     pytest-operator
 commands = pytest -v --tb native --show-capture=no --log-cli-level=INFO -s {posargs} {toxinidir}/tests/integration
 
 [testenv:lint]
-deps =
-    black
-    flake8
 commands =
     flake8 {toxinidir}/tests {toxinidir}/src
     black --check --diff {toxinidir}/tests {toxinidir}/src
+
+[testenv:build]
+commands =
+    charmcraft build
+    python3 -m serialized_data_interface.local_sdi
