--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Setup operator environment
-        uses: charmed-kubernetes/actions-operator@master
+        uses: charmed-kubernetes/actions-operator@main
         with:
             provider: microk8s
       - name: Run test
