Update tox.ini file
Moves dependencies out to shared test-requirements.txt, except for
pytest-operator, as that patches pytest in ways that take longer to run
and are unnecessary for the unit/lint tests.

--- a/tox.ini
+++ b/tox.ini
@@ -10,26 +10,19 @@ envlist = lint,unit,integration
 setenv =
     PYTHONPATH={toxinidir}:{toxinidir}/src
     PYTHONBREAKPOINT=ipdb.set_trace
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/test-requirements.txt
 
 [testenv:unit]
-deps =
-    pyyaml
-    pytest
-    bcrypt
-    -r{toxinidir}/requirements.txt
-commands = pytest -v --tb native -s {posargs} {toxinidir}/tests/unit
+commands = pytest -vvs {toxinidir}/tests/unit {posargs}
 
 [testenv:integration]
 deps =
-    juju
-    pytest
     pytest-operator
-commands = pytest -v --tb native --show-capture=no --log-cli-level=INFO -s {posargs} {toxinidir}/tests/integration
+commands = pytest -vvs --log-cli-level=INFO {toxinidir}/tests/integration {posargs}
 
 [testenv:lint]
-deps =
-    black
-    flake8
 commands =
     flake8 {toxinidir}/tests {toxinidir}/src
     black --check --diff {toxinidir}/tests {toxinidir}/src
