Add Copyright headers and check
Add Copyright headers to all the relevant files and check
with flake8-copyright.

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,3 +1,6 @@
+# Copyright 2021 Canonical Ltd.
+# See LICENSE file for licensing details.
+
 name: dex-auth
 display-name: Dex
 summary: A federated OpenID Connect provider
