--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,12 @@
+# Copyright 2021 Canonical Ltd.
+# See LICENSE file for licensing details.
+
 [flake8]
 max-line-length = 100
 ignore = W503
+copyright-check = True
+copyright-author = Canonical Ltd.
+select = E,F,W,C
 
 [tox]
 skipsdist = True
