--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# Copyright 2021 Canonical Ltd.
+# See LICENSE file for licensing details.
+
 oci-image==1.0.0
 ops==1.2.0
 serialized-data-interface<0.4
