--- a/metadata.yaml
+++ b/metadata.yaml
@@ -5,16 +5,9 @@ name: dex-auth
 display-name: Dex
 summary: A federated OpenID Connect provider
 description: |
-  OpenID Connect Identity (OIDC) and OAuth 2.0 Provider with Pluggable Connectors
+  Dex is an identity service that uses OpenID Connect to drive authentication for other apps.
 maintainers: [Juju Developers <juju@lists.ubuntu.com>]
 tags: [kubernetes, dex, oauth, oidc, authentication]
-series: [kubernetes]
-resources:
-  oci-image:
-    type: oci-image
-    description: 'Backing OCI image'
-    auto-fetch: true
-    upstream-source: quay.io/dexidp/dex:v2.28.1
 requires:
   oidc-client:
     interface: oidc-client
@@ -24,4 +17,3 @@ requires:
     interface: ingress
     schema: https://raw.githubusercontent.com/canonical/operator-schemas/master/ingress.yaml
     versions: [v1]
-min-juju-version: 2.8.6
