--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Copyright 2021 Canonical Ltd.
 # See LICENSE file for licensing details.
 
-oci-image==1.0.0
-ops==1.2.0
+jinja2<3.1
+lightkube<=0.9
+ops<1.3.0
 serialized-data-interface<0.4
