--- a/src/manifests/crds.yaml
+++ b/src/manifests/crds.yaml
@@ -1,8 +1,5 @@
-# Copyright 2021 Canonical Ltd.
-# See LICENSE file for licensing details.
-
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: authcodes.dex.coreos.com
@@ -14,4 +11,11 @@ spec:
     plural: authcodes
     singular: authcode
   scope: Namespaced
-  version: v1
+  versions:
+  - name: v1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        x-kubernetes-preserve-unknown-fields: true
