fix: missing ServiceAccount token, status handling
ServiceAccount used for dex-auth was missing a `automountServiceAccountToken: true`, which resulted in the workload pod not having access to the service account and thus the workload going into a crash loop.  This was visible in the pod logs which included `msg="config issuer: /dex" failed to initialize storage: open /var/run/secrets/kubernetes.io/serviceaccount/token: no such file or directory`.  This broken pod was not detected by CI because the charm did not check whether deployments/statefulsets actually had their pods up and running.

Fixes committed here:
 * `automountServiceAccountToken: true` added to the ServiceAccount for dex-auth to enable passing a ServiceAccount token to the workload pods
 * some checks during install that attempt to validate that the deployments/statefulsets we deployed are up, raising a BlockedStatus if they're not rather than erroneously going to Active

--- a/src/manifests/deployment.yaml
+++ b/src/manifests/deployment.yaml
@@ -3,19 +3,19 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: {{ name }}
-  name: {{ name }}
+    app.kubernetes.io/name: {{ name }}-charm
+  name: {{ name }}-charm
 spec:
   replicas: 1
   selector:
     matchLabels:
-        app: {{ name }}
+      app.kubernetes.io/name: {{ name }}-charm
   template:
     metadata:
       labels:
-        app: {{ name }}
+        app.kubernetes.io/name: {{ name }}-charm
     spec:
-      serviceAccountName: {{ name }}
+      serviceAccountName: {{ name }}-charm
       containers:
       - image: quay.io/dexidp/dex:v2.22.0
         name: dex
@@ -34,7 +34,7 @@ spec:
       volumes:
       - name: config
         configMap:
-          name: {{ name }}
+          name: {{ name }}-charm
           items:
           - key: config.yaml
             path: config.yaml
