--- a/src/manifests/config-map.yaml
+++ b/src/manifests/config-map.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ name }}
+  name: {{ name }}-charm
 data:
   config.yaml: |
     {{ config_yaml }}
