--- a/src/manifests/service.yaml
+++ b/src/manifests/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ name }}
+  name: {{ name }}-charm
 spec:
   type: ClusterIP
   ports:
@@ -11,4 +11,5 @@ spec:
     protocol: TCP
     targetPort: {{ port }}
   selector:
-    app: {{ name }}
+    app.kubernetes.io/name: {{ name }}-charm
+
