fix: ingress service name incorrect
the service name provided to the ingress relation was missing a suffix.   This fix also changes the existing suffix from "-charm" to "-workload" to avoid ambiguity about what are objects that ARE the charm (created by juju) and what are objects created by the charm to support the work it does (suffixed with "-workload")

--- a/src/manifests/config-map.yaml
+++ b/src/manifests/config-map.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ name }}-charm
+  name: {{ name }}-workload
 data:
   config.yaml: |
     {{ config_yaml }}
