--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,9 @@ commands = pytest -vvs {toxinidir}/tests/unit {posargs}
 
 [testenv:integration]
 deps =
+    {[testenv]deps}
     pytest-operator
-commands = pytest -vvs --log-cli-level=INFO {toxinidir}/tests/integration {posargs}
+commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration {posargs}
 
 [testenv:lint]
 commands =
