--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands = pytest -vvs {toxinidir}/tests/unit {posargs}
 [testenv:integration]
 deps =
     pytest-operator
-commands = pytest -vvs --log-cli-level=INFO {toxinidir}/tests/integration {posargs}
+    lightkube
 
 [testenv:lint]
 commands =
