--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -40,6 +40,8 @@ jobs:
           channel: 1.21/stable
 
       - run: sg microk8s -c 'microk8s enable metallb:10.64.140.43-10.64.140.49'
+      - run: sg microk8s -c 'sudo chown -f -R $USER ~/.kube'
+      - run: sudo cp /var/snap/microk8s/current/credentials/client.config $HOME/.kube/config
       # https://github.com/charmed-kubernetes/actions-operator/issues/27
       - run: sudo snap refresh charmcraft --channel latest/candidate
       - run: tox -e integration
