--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -38,6 +38,7 @@ jobs:
         with:
           provider: microk8s
           channel: 1.21/stable
+          bootstrap-options: --agent-version="2.9.22"
 
       - run: sg microk8s -c 'microk8s enable metallb:10.64.140.43-10.64.140.49'
       - run: sg microk8s -c 'sudo chown -f -R $USER ~/.kube'
