--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands = pytest -vvs {toxinidir}/tests/unit {posargs}
 deps =
     pytest-operator
     lightkube
-commands = pytest -vvs --log-cli-level=INFO {toxinidir}/tests/integration {posargs}
+commands = pytest -vvs --tb native --asyncio-mode=auto --log-cli-level=INFO {toxinidir}/tests/integration {posargs}
 
 [testenv:lint]
 commands =
