--- a/metadata.yaml
+++ b/metadata.yaml
@@ -13,3 +13,8 @@ requires:
     interface: ingress
     schema: https://raw.githubusercontent.com/canonical/operator-schemas/master/ingress.yaml
     versions: [v1]
+provides:
+  metrics-endpoint:
+    interface: prometheus_scrape
+  grafana-dashboards:
+    interface: grafana_dashboard
