--- a/metadata.yaml
+++ b/metadata.yaml
@@ -16,5 +16,5 @@ requires:
 provides:
   metrics-endpoint:
     interface: prometheus_scrape
-  grafana-dashboards:
+  grafana-dashboard:
     interface: grafana_dashboard
