--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -11,4 +11,6 @@ bases:
       channel: "20.04"
 parts:
   charm:
-    charm-python-packages: [setuptools, pip]
+    # Unpin the versions when pypa/setuptools_scm#713 gets fixed
+    charm-python-packages: [ setuptools==62.1.0, pip==22.0.4 ]
+
