--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -2,6 +2,9 @@ name: Tests
 
 on:
   workflow_call:
+    secrets:
+      credentials:
+        required: true
   schedule:
     - cron: '0 8 * * TUE'
 
@@ -18,7 +21,7 @@ jobs:
       - name: Check libs
         uses: canonical/charming-actions/check-libraries@1.0.3
         with:
-          credentials: "${{ secrets.CHARMCRAFT_CREDENTIALS }}"
+          credentials: "${{ secrets.credentials }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
   lint:
