--- a/.github/workflows/on_pull_request.yaml
+++ b/.github/workflows/on_pull_request.yaml
@@ -12,8 +12,12 @@ jobs:
   tests:
     name: Run Tests
     uses: ./.github/workflows/integration.yaml
+    secrets:
+      credentials: "${{ secrets.CHARMCRAFT_CREDENTIALS }}"
 
   # publish runs in parallel with tests, as we always publish in this situation
   publish-charm:
     name: Publish Charm
     uses: ./.github/workflows/publish.yaml
+    secrets:
+      credentials: "${{ secrets.CHARMCRAFT_CREDENTIALS }}"
