--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -3,7 +3,7 @@ name: Tests
 on:
   workflow_call:
     secrets:
-      credentials:
+      charmcraft-credentials:
         required: true
   schedule:
     - cron: '0 8 * * TUE'
@@ -21,7 +21,7 @@ jobs:
       - name: Check libs
         uses: canonical/charming-actions/check-libraries@1.0.3
         with:
-          credentials: "${{ secrets.credentials }}"
+          credentials: "${{ secrets.charmcraft-credentials }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
   lint:
