--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -20,7 +20,7 @@ jobs:
     name: Run Tests
     uses: ./.github/workflows/integration.yaml
     secrets:
-      credentials: "${{ secrets.CHARMCRAFT_CREDENTIALS }}"
+      charmcraft-credentials: "${{ secrets.CHARMCRAFT_CREDENTIALS }}"
 
   # publish runs in series with tests, and only publishes if tests passes
   publish-charm:
@@ -28,4 +28,4 @@ jobs:
     needs: tests
     uses: ./.github/workflows/publish.yaml
     secrets:
-      credentials: "${{ secrets.CHARMCRAFT_CREDENTIALS }}"
+      charmcraft-credentials: "${{ secrets.CHARMCRAFT_CREDENTIALS }}"
