--- a/src/manifests/deployment.yaml
+++ b/src/manifests/deployment.yaml
@@ -31,6 +31,8 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          - name: CONFIG_HASH
+            value: {{ config_hash }}
       volumes:
       - name: config
         configMap:
