Allow providing custom image location, updating default image from quay to ghcr.io

--- a/config.yaml
+++ b/config.yaml
@@ -24,3 +24,7 @@ options:
     type: string
     default: ''
     description: Static password for logging in without an external auth service
+  image:
+    type: string
+    description: The docker image to install. Required.
+    default: 'ghcr.io/dexidp/dex:v2.28.1'
