covert to sidecar

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,10 @@ commands = pytest -vvs {toxinidir}/tests/unit {posargs}
 deps =
     {[testenv]deps}
     pytest-operator
-commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration {posargs}
+
+# TODO: Remove the ignore part once the sidecar charm is promoted to latest/stable
+commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration {posargs} \
+    --ignore={toxinidir}/tests/integration/test_upgrade_charm.py
 
 [testenv:lint]
 commands =
