--- a/metadata.yaml
+++ b/metadata.yaml
@@ -18,3 +18,11 @@ provides:
     interface: prometheus_scrape
   grafana-dashboard:
     interface: grafana_dashboard
+containers:
+  dex:
+    resource: dex-auth-image
+resources:
+  dex-auth-image:
+    type: oci-image
+    description: OCI image for dex container
+    upstream-source: dexidp/dex:v2.31.2
