--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -62,6 +62,7 @@ jobs:
 
       - name: Run test
         run: |
+          sg microk8s -c "microk8s enable rbac ingress metallb:10.64.140.43-10.64.140.49"
           # Requires the model to be called kubeflow due to this bug:
           # https://github.com/kubeflow/kubeflow/issues/6136
           juju add-model kubeflow
@@ -72,6 +73,10 @@ jobs:
 
       - name: Get istio gateway
         run: kubectl get gateway -A
+        if: failure()
+
+      - name: Get juju status
+        run: juju status
         if: failure()
 
       - name: Upload selenium screenshots
