--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -80,19 +80,19 @@ jobs:
         if: failure()
 
       - name: Get oidc-gatekeeper workload logs
-        run: kubectl logs --tail 100 -nkubeflow -ljuju-app=oidc-gatekeeper
+        run: kubectl logs -l app.kubernetes.io/name=oidc-gatekeeper -n kubeflow
         if: failure()
 
       - name: Get oidc-gatekeeper operator logs
-        run: kubectl logs --tail 100 -nkubeflow -ljuju-operator=oidc-gatekeeper
+        run: kubectl logs -l operator.juju.is/name=oidc-gatekeeper -n kubeflow
         if: failure()
 
-      - name: Get dex-auth workload logs
-        run: kubectl logs --tail 100 -nkubeflow -ljuju-app=dex-auth
+      - name: Get dex container logs
+        run: kubectl logs dex-auth-0 -c dex -n kubeflow
         if: failure()
 
-      - name: Get dex-auth operator logs
-        run: kubectl logs --tail 100 -nkubeflow -ljuju-operator=dex-auth
+      - name: Get dex container config
+        run: kubectl exec -it dex-auth-0 -c dex -n kubeflow -- cat /etc/dex/config.docker.yaml
         if: failure()
 
       - name: Upload selenium screenshots
