--- a/requirements-integration.txt
+++ b/requirements-integration.txt
@@ -14,6 +14,10 @@ anyio==3.6.2
     #   httpcore
 asttokens==2.2.1
     # via stack-data
+async-generator==1.10
+    # via
+    #   trio
+    #   trio-websocket
 async-timeout==4.0.2
     # via aiohttp
 attrs==22.1.0
@@ -21,11 +25,17 @@ attrs==22.1.0
     #   -r ./requirements.txt
     #   aiohttp
     #   jsonschema
+    #   outcome
     #   pytest
+    #   trio
 backcall==0.2.0
     # via ipython
 bcrypt==4.0.1
     # via paramiko
+blinker==1.5
+    # via selenium-wire
+brotli==1.0.9
+    # via selenium-wire
 cachetools==5.2.0
     # via google-auth
 certifi==2022.12.7
@@ -35,6 +45,8 @@ certifi==2022.12.7
     #   httpx
     #   kubernetes
     #   requests
+    #   selenium
+    #   selenium-wire
 cffi==1.15.1
     # via
     #   cryptography
@@ -46,13 +58,17 @@ chardet==3.0.4
 charset-normalizer==2.1.1
     # via aiohttp
 cryptography==38.0.4
-    # via paramiko
+    # via
+    #   paramiko
+    #   pyopenssl
 decorator==5.1.1
     # via
     #   ipdb
     #   ipython
 exceptiongroup==1.0.4
-    # via pytest
+    # via
+    #   pytest
+    #   trio
 executing==1.2.0
     # via stack-data
 frozenlist==1.3.3
@@ -65,6 +81,11 @@ h11==0.14.0
     # via
     #   -r ./requirements.txt
     #   httpcore
+    #   wsproto
+h2==4.1.0
+    # via selenium-wire
+hpack==4.0.0
+    # via h2
 httpcore==0.16.2
     # via
     #   -r ./requirements.txt
@@ -73,12 +94,17 @@ httpx==0.23.1
     # via
     #   -r ./requirements.txt
     #   lightkube
+hyperframe==6.0.1
+    # via
+    #   h2
+    #   selenium-wire
 idna==2.10
     # via
     #   -r ./requirements.txt
     #   anyio
     #   requests
     #   rfc3986
+    #   trio
     #   yarl
 iniconfig==1.1.1
     # via pytest
@@ -103,6 +129,8 @@ juju==3.0.4
     #   pytest-operator
 jujubundlelib==0.5.7
     # via theblues
+kaitaistruct==0.10
+    # via selenium-wire
 kubernetes==17.17.0
     # via juju
 lightkube==0.11.0
@@ -133,6 +161,8 @@ ops==1.5.4
     # via
     #   -r ./requirements.txt
     #   serialized-data-interface
+outcome==1.2.0
+    # via trio
 packaging==22.0
     # via pytest
 paramiko==2.12.0
@@ -158,6 +188,7 @@ pyasn1==0.4.8
     #   juju
     #   pyasn1-modules
     #   rsa
+    #   selenium-wire
 pyasn1-modules==0.2.8
     # via google-auth
 pycparser==2.21
@@ -171,6 +202,10 @@ pynacl==1.5.0
     #   macaroonbakery
     #   paramiko
     #   pymacaroons
+pyopenssl==22.1.0
+    # via selenium-wire
+pyparsing==3.0.9
+    # via selenium-wire
 pyrfc3339==1.1
     # via
     #   juju
@@ -179,6 +214,10 @@ pyrsistent==0.19.2
     # via
     #   -r ./requirements.txt
     #   jsonschema
+pysocks==1.7.1
+    # via
+    #   selenium-wire
+    #   urllib3
 pytest==7.2.0
     # via
     #   pytest-asyncio
@@ -218,6 +257,12 @@ rfc3986[idna2008]==1.5.0
     #   httpx
 rsa==4.9
     # via google-auth
+selenium==4.7.2
+    # via
+    #   -r ./requirements-integration.in
+    #   selenium-wire
+selenium-wire==5.1.0
+    # via -r ./requirements-integration.in
 serialized-data-interface==0.3.5
     # via -r ./requirements.txt
 six==1.16.0
@@ -237,6 +282,9 @@ sniffio==1.3.0
     #   anyio
     #   httpcore
     #   httpx
+    #   trio
+sortedcontainers==2.4.0
+    # via trio
 stack-data==0.6.2
     # via ipython
 tenacity==8.1.0
@@ -253,23 +301,36 @@ traitlets==5.7.0
     # via
     #   ipython
     #   matplotlib-inline
+trio==0.22.0
+    # via
+    #   selenium
+    #   trio-websocket
+trio-websocket==0.9.2
+    # via selenium
 typing-extensions==4.4.0
     # via typing-inspect
 typing-inspect==0.8.0
     # via juju
-urllib3==1.26.13
+urllib3[socks]==1.26.13
     # via
     #   -r ./requirements.txt
     #   kubernetes
     #   requests
+    #   selenium
 wcwidth==0.2.5
     # via prompt-toolkit
 websocket-client==1.4.2
     # via kubernetes
 websockets==7.0
     # via juju
+wsproto==1.2.0
+    # via
+    #   selenium-wire
+    #   trio-websocket
 yarl==1.8.2
     # via aiohttp
+zstandard==0.19.0
+    # via selenium-wire
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
