fix: use command from main branch for integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -74,12 +74,8 @@ deps =
 description = Run unit tests
 
 [testenv:integration]
-commands = pytest -v --tb native --asyncio-mode=auto {[vars]tst_path}integration --log-cli-level=INFO -s {posargs}
+commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration {posargs} \
+    --ignore={toxinidir}/tests/integration/test_upgrade_charm.py
 deps =
     -r requirements-integration.txt
 description = Run integration tests
-
-
-# TODO: Remove the ignore part once the sidecar charm is promoted to latest/stable
-; commands = pytest -vvs --tb native --log-cli-level=INFO --asyncio-mode=auto {toxinidir}/tests/integration {posargs} \
-;     --ignore={toxinidir}/tests/integration/test_upgrade_charm.py
