--- a/metadata.yaml
+++ b/metadata.yaml
@@ -7,12 +7,68 @@ description: |
 requires:
   oidc-client:
     interface: oidc-client
-    schema: https://raw.githubusercontent.com/canonical/operator-schemas/master/oidc-client.yaml
+    schema:
+      v1:
+        provides:
+          type: object
+          properties:
+            id:
+              type: string
+            name:
+              type: string
+            redirectURIs:
+              type: array
+              items:
+                type: string
+            secret:
+              type: string
+          required:
+          - id
+          - name
+          - redirectURIs
+          - secret
     versions: [v1]
+    __schema_source: https://raw.githubusercontent.com/canonical/operator-schemas/master/oidc-client.yaml
   ingress:
     interface: ingress
-    schema: https://raw.githubusercontent.com/canonical/operator-schemas/master/ingress.yaml
+    schema:
+      v2:
+        requires:
+          type: object
+          properties:
+            service:
+              type: string
+            port:
+              type: integer
+            namespace:
+              type: string
+            prefix:
+              type: string
+            rewrite:
+              type: string
+          required:
+          - service
+          - port
+          - namespace
+          - prefix
+      v1:
+        requires:
+          type: object
+          properties:
+            service:
+              type: string
+            port:
+              type: integer
+            prefix:
+              type: string
+            rewrite:
+              type: string
+          required:
+          - service
+          - port
+          - prefix
     versions: [v1]
+    __schema_source: https://raw.githubusercontent.com/canonical/operator-schemas/master/ingress.yaml
 provides:
   metrics-endpoint:
     interface: prometheus_scrape
