reuse ci pipeline

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -12,6 +12,8 @@ jobs:
     name: Check libraries
     uses: canonical/charmed-kubeflow-workflows/.github/workflows/_quality-checks.yaml@main
     secrets: inherit
+    with:
+      charm-path: "."
 
   lint:
     name: Lint
