--- a/config.yaml
+++ b/config.yaml
@@ -18,9 +18,9 @@ options:
       in https://github.com/dexidp/dex#connectors
   static-username:
     type: string
-    default: ''
+    default: 'admin'
     description: Static username for logging in without an external auth service
   static-password:
     type: string
-    default: ''
+    default: 'admin'
     description: Static password for logging in without an external auth service
