--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@
 # See LICENSE file for licensing details.
 
 options:
-  enablePasswordDB:
+  enable-password-db:
     type: boolean
     default: true
     description: Allows dex to keep a list of passwords which can be used to login to dex
