add default k8s-internal value for public-url
This change simplifies the setup for most (all?) OIDC+dex setups.  By using the k8s-internal link to dex-auth rather than
* adds the OIDC_AUTH_URL env var to OIDC, which lets OIDC redirect the user to dex via a relative link rather than the absolute OIDC_PROVIDER link
* sets public-url (and thus OIDC_PROVIDER) to 'http://dex-auth.kubeflow.svc.cluster.local:5556' by default.  Also adds special handling for k8s-internal urls since we typically append `/dex` to the public url for OIDC's inputs
* Adds `AFTER_LOGIN_URL` to redirect all logins to the dashboard.  This solves some corner cases where getting redirected to a login from a login page makes it seem to the user like they're in a login redirect loop even though they aren't.
* Removes the `AFTER_LOGOUT_URL` which, if left out, defaults to a working value when the other env variables discussed above are set

--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,10 @@ options:
   public-url:
     type: string
     default: ''
-    description: Publicly-accessible endpoint for cluster
+    description: |
+      Publicly-accessible endpoint for cluster, or the kubernetes internally-accessible 
+      url for dex-auth.  Defaults to its kubernetes internally-accessible url, as 
+      computed by the charm.
   connectors:
     type: string
     default: ''
