--- a/requirements-unit.txt
+++ b/requirements-unit.txt
@@ -4,80 +4,90 @@
 #
 #    pip-compile --resolver=backtracking ./requirements-unit.in
 #
-anyio==3.6.2
+anyio==3.7.0
     # via
     #   -r ./requirements.txt
     #   httpcore
-attrs==22.1.0
+attrs==23.1.0
     # via
     #   -r ./requirements.txt
     #   jsonschema
-    #   pytest
 bcrypt==4.0.1
     # via -r ./requirements-unit.in
-certifi==2022.12.7
+certifi==2023.5.7
     # via
     #   -r ./requirements.txt
     #   httpcore
     #   httpx
     #   requests
-chardet==3.0.4
+charset-normalizer==3.1.0
     # via
     #   -r ./requirements.txt
     #   requests
-coverage==6.5.0
+coverage==7.2.7
     # via -r ./requirements-unit.in
-exceptiongroup==1.0.4
-    # via pytest
+exceptiongroup==1.1.1
+    # via
+    #   -r ./requirements.txt
+    #   anyio
+    #   pytest
 h11==0.14.0
     # via
     #   -r ./requirements.txt
     #   httpcore
-httpcore==0.16.2
+httpcore==0.17.2
     # via
     #   -r ./requirements.txt
     #   httpx
-httpx==0.23.1
+httpx==0.24.1
     # via
     #   -r ./requirements.txt
     #   lightkube
-idna==2.10
+idna==3.4
     # via
     #   -r ./requirements.txt
     #   anyio
+    #   httpx
     #   requests
-    #   rfc3986
-iniconfig==1.1.1
-    # via pytest
-jinja2==3.1.2
-    # via -r ./requirements.txt
-jsonschema==3.2.0
-    # via
-    #   -r ./requirements.txt
-    #   serialized-data-interface
-lightkube==0.11.0
-    # via -r ./requirements.txt
-lightkube-models==1.25.4.4
-    # via
-    #   -r ./requirements.txt
-    #   lightkube
-markupsafe==2.1.1
-    # via
-    #   -r ./requirements.txt
-    #   jinja2
-ops==1.5.4
-    # via
-    #   -r ./requirements.txt
-    #   serialized-data-interface
-packaging==22.0
-    # via pytest
-pluggy==1.0.0
-    # via pytest
-pyrsistent==0.19.2
+importlib-resources==5.12.0
     # via
     #   -r ./requirements.txt
     #   jsonschema
-pytest==7.2.0
+iniconfig==2.0.0
+    # via pytest
+jinja2==3.1.2
+    # via -r ./requirements.txt
+jsonschema==4.17.3
+    # via
+    #   -r ./requirements.txt
+    #   serialized-data-interface
+lightkube==0.13.0
+    # via -r ./requirements.txt
+lightkube-models==1.27.1.4
+    # via
+    #   -r ./requirements.txt
+    #   lightkube
+markupsafe==2.1.3
+    # via
+    #   -r ./requirements.txt
+    #   jinja2
+ops==1.5.5
+    # via
+    #   -r ./requirements.txt
+    #   serialized-data-interface
+packaging==23.1
+    # via pytest
+pkgutil-resolve-name==1.3.10
+    # via
+    #   -r ./requirements.txt
+    #   jsonschema
+pluggy==1.0.0
+    # via pytest
+pyrsistent==0.19.3
+    # via
+    #   -r ./requirements.txt
+    #   jsonschema
+pytest==7.3.2
     # via
     #   -r ./requirements-unit.in
     #   pytest-lazy-fixture
@@ -86,26 +96,18 @@ pytest-lazy-fixture==0.6.3
     # via -r ./requirements-unit.in
 pytest-mock==3.10.0
     # via -r ./requirements-unit.in
-pyyaml==5.4
+pyyaml==6.0
     # via
     #   -r ./requirements.txt
     #   lightkube
     #   ops
     #   serialized-data-interface
-requests==2.25.0
+requests==2.31.0
     # via
     #   -r ./requirements.txt
     #   serialized-data-interface
-rfc3986[idna2008]==1.5.0
-    # via
-    #   -r ./requirements.txt
-    #   httpx
-serialized-data-interface==0.3.5
+serialized-data-interface==0.6.0
     # via -r ./requirements.txt
-six==1.16.0
-    # via
-    #   -r ./requirements.txt
-    #   jsonschema
 sniffio==1.3.0
     # via
     #   -r ./requirements.txt
@@ -114,10 +116,11 @@ sniffio==1.3.0
     #   httpx
 tomli==2.0.1
     # via pytest
-urllib3==1.26.13
+urllib3==2.0.3
     # via
     #   -r ./requirements.txt
     #   requests
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
+zipp==3.15.0
+    # via
+    #   -r ./requirements.txt
+    #   importlib-resources
