--- a/requirements-integration.txt
+++ b/requirements-integration.txt
@@ -126,7 +126,7 @@ jsonschema==4.17.3
     # via
     #   -r ./requirements.txt
     #   serialized-data-interface
-juju==3.0.4
+juju==2.9.42.4
     # via
     #   -r ./requirements-integration.in
     #   pytest-operator
@@ -160,7 +160,7 @@ mypy-extensions==1.0.0
     # via typing-inspect
 oauthlib==3.2.2
     # via requests-oauthlib
-ops==2.3.0
+ops==1.5.5
     # via
     #   -r ./requirements.txt
     #   serialized-data-interface
@@ -323,10 +323,7 @@ urllib3[socks]==2.0.3
 wcwidth==0.2.6
     # via prompt-toolkit
 websocket-client==1.5.3
-    # via
-    #   -r ./requirements.txt
-    #   kubernetes
-    #   ops
+    # via kubernetes
 websockets==7.0
     # via juju
 wsproto==1.2.0
