--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ commands =
     # uncomment the following line if this charm owns a lib
     # codespell {[vars]lib_path}
     codespell {toxinidir}/. --skip {toxinidir}/./.git --skip {toxinidir}/./.tox \
-      --skip {toxinidir}/./build --skip {toxinidir}/./lib --skip {toxinidir}/./venv \
+      --skip {toxinidir}/./build --skip {toxinidir}/./lib --skip {toxinidir}/./venv* \
       --skip {toxinidir}/./.mypy_cache \
       --skip {toxinidir}/./icon.svg --skip *.json.tmpl
     # pflake8 wrapper supports config from pyproject.toml
