ci, build: update CI and python dependencies
This commit updates the CI with standard CI configuration (juju, actions, deps) that is shared
across multiple repositories. All python dependencies are also updated to their latest working
versions. Finally, some formatting was applied on non-compliant files (copyright, style).

--- a/requirements-unit.in
+++ b/requirements-unit.in
@@ -1,6 +1,9 @@
 bcrypt
+charmed-kubeflow-chisme
 coverage
+ops
 pytest
 pytest-mock
 pytest-lazy-fixture
--r requirements.txt
+pyyaml
+serialized-data-interface
