--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,9 @@
 # See LICENSE file for licensing details.
 charmed-kubeflow-chisme
 jinja2
+# Workaround for https://github.com/python-jsonschema/jsonschema/issues/1117
+# and https://github.com/python-jsonschema/jsonschema/issues/1114
+jsonschema<4.18
 lightkube
 ops<2
 serialized-data-interface
