--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -11,5 +11,4 @@ bases:
       channel: "20.04"
 parts:
   charm:
-    # do not use these versions due to pypa/setuptools_scm#713
-    charm-python-packages: [setuptools!=62.2.0, pip!=22.1]
+    charm-python-packages: [setuptools, pip]
