--- a/requirements-unit.txt
+++ b/requirements-unit.txt
@@ -7,9 +7,7 @@
 anyio==3.7.1
     # via httpcore
 attrs==23.1.0
-    # via
-    #   jsonschema
-    #   referencing
+    # via jsonschema
 bcrypt==4.0.1
     # via -r ./requirements-unit.in
 certifi==2023.5.7
@@ -41,17 +39,15 @@ idna==3.4
     #   httpx
     #   requests
 importlib-resources==6.0.0
-    # via
-    #   jsonschema
-    #   jsonschema-specifications
+    # via jsonschema
 iniconfig==2.0.0
     # via pytest
 jinja2==3.1.2
     # via charmed-kubeflow-chisme
-jsonschema==4.18.4
-    # via serialized-data-interface
-jsonschema-specifications==2023.7.1
-    # via jsonschema
+jsonschema==4.17.3
+    # via
+    #   -r ./requirements-unit.in
+    #   serialized-data-interface
 lightkube==0.14.0
     # via charmed-kubeflow-chisme
 lightkube-models==1.27.1.4
@@ -71,6 +67,8 @@ pkgutil-resolve-name==1.3.10
     # via jsonschema
 pluggy==1.2.0
     # via pytest
+pyrsistent==0.19.3
+    # via jsonschema
 pytest==7.4.0
     # via
     #   -r ./requirements-unit.in
@@ -86,16 +84,8 @@ pyyaml==6.0.1
     #   lightkube
     #   ops
     #   serialized-data-interface
-referencing==0.30.0
-    # via
-    #   jsonschema
-    #   jsonschema-specifications
 requests==2.31.0
     # via serialized-data-interface
-rpds-py==0.9.2
-    # via
-    #   jsonschema
-    #   referencing
 ruamel-yaml==0.17.32
     # via charmed-kubeflow-chisme
 ruamel-yaml-clib==0.2.7
