--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,7 @@
 anyio==3.7.1
     # via httpcore
 attrs==23.1.0
-    # via
-    #   jsonschema
-    #   referencing
+    # via jsonschema
 certifi==2023.5.7
     # via
     #   httpcore
@@ -35,17 +33,15 @@ idna==3.4
     #   httpx
     #   requests
 importlib-resources==6.0.0
-    # via
-    #   jsonschema
-    #   jsonschema-specifications
+    # via jsonschema
 jinja2==3.1.2
     # via
     #   -r ./requirements.in
     #   charmed-kubeflow-chisme
-jsonschema==4.18.4
-    # via serialized-data-interface
-jsonschema-specifications==2023.7.1
-    # via jsonschema
+jsonschema==4.17.3
+    # via
+    #   -r ./requirements.in
+    #   serialized-data-interface
 lightkube==0.14.0
     # via
     #   -r ./requirements.in
@@ -63,21 +59,15 @@ ordered-set==4.1.0
     # via deepdiff
 pkgutil-resolve-name==1.3.10
     # via jsonschema
+pyrsistent==0.19.3
+    # via jsonschema
 pyyaml==6.0.1
     # via
     #   lightkube
     #   ops
     #   serialized-data-interface
-referencing==0.30.0
-    # via
-    #   jsonschema
-    #   jsonschema-specifications
 requests==2.31.0
     # via serialized-data-interface
-rpds-py==0.9.2
-    # via
-    #   jsonschema
-    #   referencing
 ruamel-yaml==0.17.32
     # via charmed-kubeflow-chisme
 ruamel-yaml-clib==0.2.7
