--- a/requirements-integration.in
+++ b/requirements-integration.in
@@ -1,9 +1,11 @@
 aiohttp
+lightkube
 jinja2
-juju<3.1
+# Pinning to <3.0 due to compatibility with the 2.9 controller version and 3.0 not being maintained anymore
+juju<3.0
 pytest-operator
 requests
 selenium
 selenium-wire
+serialized-data-interface<0.4
 tenacity
--r requirements.txt
