build: update requirements*.in and their corresponding .txt files to match standards
Using the same package versions for this repository as we do in others guarantee a certain
standard across all of them. This commit removes explicit package pins and upgrades some
package versions accordingly.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ anyio==3.7.1
     # via httpcore
 attrs==23.1.0
     # via jsonschema
-certifi==2023.5.7
+certifi==2023.7.22
     # via
     #   httpcore
     #   httpx
@@ -39,9 +39,7 @@ jinja2==3.1.2
     #   -r ./requirements.in
     #   charmed-kubeflow-chisme
 jsonschema==4.17.3
-    # via
-    #   -r ./requirements.in
-    #   serialized-data-interface
+    # via serialized-data-interface
 lightkube==0.14.0
     # via
     #   -r ./requirements.in
@@ -50,7 +48,7 @@ lightkube-models==1.27.1.4
     # via lightkube
 markupsafe==2.1.3
     # via jinja2
-ops==1.5.5
+ops==2.4.1
     # via
     #   -r ./requirements.in
     #   charmed-kubeflow-chisme
@@ -72,7 +70,7 @@ ruamel-yaml==0.17.32
     # via charmed-kubeflow-chisme
 ruamel-yaml-clib==0.2.7
     # via ruamel-yaml
-serialized-data-interface==0.6.0
+serialized-data-interface==0.7.0
     # via -r ./requirements.in
 sniffio==1.3.0
     # via
@@ -83,5 +81,7 @@ tenacity==8.2.2
     # via charmed-kubeflow-chisme
 urllib3==2.0.4
     # via requests
+websocket-client==1.6.1
+    # via ops
 zipp==3.16.2
     # via importlib-resources
