--- a/requirements-unit.in
+++ b/requirements-unit.in
@@ -1,12 +1,20 @@
-bcrypt
-charmed-kubeflow-chisme
+# Copyright 2023 Canonical Ltd.
+# See LICENSE file for licensing details.
+# Please note this file introduces dependencies from the charm's requirements.in,
+# special attention must be taken when updating this or the other .in file to try
+# to avoid incompatibilities.
+# Rules for editing this file:
+#   * Removing a dependency that is no longer used in the unit test file(s)
+#     is allowed, and should not represent any risk.
+#   * Adding a dependency in this file means the dependency is directly used
+#     in the unit test files(s).
+#   * ALL python packages/libs used directly in the unit test file(s) must be
+#     listed here even if requirements.in is already adding them. This will
+#     add clarity to the dependency list.
+#   * Pinning a version of a python package/lib shared with requirements.in
+#     must not introduce any incompatibilities.
 coverage
-# Workaround for https://github.com/python-jsonschema/jsonschema/issues/1117
-# and https://github.com/python-jsonschema/jsonschema/issues/1114
-jsonschema<4.18
 ops
 pytest
-pytest-mock
-pytest-lazy-fixture
 pyyaml
-serialized-data-interface
+-r requirements.in
