--- a/requirements-unit.txt
+++ b/requirements-unit.txt
@@ -8,15 +8,13 @@ anyio==3.7.1
     # via httpcore
 attrs==23.1.0
     # via jsonschema
-bcrypt==4.0.1
-    # via -r ./requirements-unit.in
-certifi==2023.5.7
+certifi==2023.7.22
     # via
     #   httpcore
     #   httpx
     #   requests
 charmed-kubeflow-chisme==0.0.11
-    # via -r ./requirements-unit.in
+    # via -r ./requirements.in
 charset-normalizer==3.2.0
     # via requests
 coverage==7.2.7
@@ -43,13 +41,15 @@ importlib-resources==6.0.0
 iniconfig==2.0.0
     # via pytest
 jinja2==3.1.2
-    # via charmed-kubeflow-chisme
-jsonschema==4.17.3
     # via
-    #   -r ./requirements-unit.in
-    #   serialized-data-interface
+    #   -r ./requirements.in
+    #   charmed-kubeflow-chisme
+jsonschema==4.17.3
+    # via serialized-data-interface
 lightkube==0.14.0
-    # via charmed-kubeflow-chisme
+    # via
+    #   -r ./requirements.in
+    #   charmed-kubeflow-chisme
 lightkube-models==1.27.1.4
     # via lightkube
 markupsafe==2.1.3
@@ -57,6 +57,7 @@ markupsafe==2.1.3
 ops==2.4.1
     # via
     #   -r ./requirements-unit.in
+    #   -r ./requirements.in
     #   charmed-kubeflow-chisme
     #   serialized-data-interface
 ordered-set==4.1.0
@@ -70,13 +71,6 @@ pluggy==1.2.0
 pyrsistent==0.19.3
     # via jsonschema
 pytest==7.4.0
-    # via
-    #   -r ./requirements-unit.in
-    #   pytest-lazy-fixture
-    #   pytest-mock
-pytest-lazy-fixture==0.6.3
-    # via -r ./requirements-unit.in
-pytest-mock==3.11.1
     # via -r ./requirements-unit.in
 pyyaml==6.0.1
     # via
@@ -90,8 +84,8 @@ ruamel-yaml==0.17.32
     # via charmed-kubeflow-chisme
 ruamel-yaml-clib==0.2.7
     # via ruamel-yaml
-serialized-data-interface==0.6.0
-    # via -r ./requirements-unit.in
+serialized-data-interface==0.7.0
+    # via -r ./requirements.in
 sniffio==1.3.0
     # via
     #   anyio
