--- a/requirements-unit.txt
+++ b/requirements-unit.txt
@@ -5,101 +5,148 @@
 #    pip-compile ./requirements-unit.in
 #
 anyio==3.7.1
-    # via httpcore
+    # via
+    #   -r ./requirements.txt
+    #   httpcore
 attrs==23.1.0
-    # via jsonschema
+    # via
+    #   -r ./requirements.txt
+    #   jsonschema
 bcrypt==4.0.1
-    # via -r ./requirements.in
+    # via -r ./requirements.txt
 certifi==2023.7.22
     # via
+    #   -r ./requirements.txt
     #   httpcore
     #   httpx
     #   requests
 charmed-kubeflow-chisme==0.0.11
-    # via -r ./requirements.in
+    # via -r ./requirements.txt
 charset-normalizer==3.2.0
-    # via requests
+    # via
+    #   -r ./requirements.txt
+    #   requests
 coverage==7.2.7
     # via -r ./requirements-unit.in
 deepdiff==6.2.1
-    # via charmed-kubeflow-chisme
+    # via
+    #   -r ./requirements.txt
+    #   charmed-kubeflow-chisme
 exceptiongroup==1.1.2
     # via
+    #   -r ./requirements.txt
     #   anyio
     #   pytest
 h11==0.14.0
-    # via httpcore
+    # via
+    #   -r ./requirements.txt
+    #   httpcore
 httpcore==0.17.3
-    # via httpx
+    # via
+    #   -r ./requirements.txt
+    #   httpx
 httpx==0.24.1
-    # via lightkube
+    # via
+    #   -r ./requirements.txt
+    #   lightkube
 idna==3.4
     # via
+    #   -r ./requirements.txt
     #   anyio
     #   httpx
     #   requests
 importlib-resources==6.0.0
-    # via jsonschema
+    # via
+    #   -r ./requirements.txt
+    #   jsonschema
 iniconfig==2.0.0
     # via pytest
 jinja2==3.1.2
     # via
-    #   -r ./requirements.in
+    #   -r ./requirements.txt
     #   charmed-kubeflow-chisme
 jsonschema==4.17.3
-    # via serialized-data-interface
+    # via
+    #   -r ./requirements.txt
+    #   serialized-data-interface
 lightkube==0.14.0
     # via
-    #   -r ./requirements.in
+    #   -r ./requirements.txt
     #   charmed-kubeflow-chisme
 lightkube-models==1.27.1.4
-    # via lightkube
+    # via
+    #   -r ./requirements.txt
+    #   lightkube
 markupsafe==2.1.3
-    # via jinja2
+    # via
+    #   -r ./requirements.txt
+    #   jinja2
 ops==2.4.1
     # via
     #   -r ./requirements-unit.in
-    #   -r ./requirements.in
+    #   -r ./requirements.txt
     #   charmed-kubeflow-chisme
     #   serialized-data-interface
 ordered-set==4.1.0
-    # via deepdiff
+    # via
+    #   -r ./requirements.txt
+    #   deepdiff
 packaging==23.1
     # via pytest
 pkgutil-resolve-name==1.3.10
-    # via jsonschema
+    # via
+    #   -r ./requirements.txt
+    #   jsonschema
 pluggy==1.2.0
     # via pytest
 pyrsistent==0.19.3
-    # via jsonschema
+    # via
+    #   -r ./requirements.txt
+    #   jsonschema
 pytest==7.4.0
     # via -r ./requirements-unit.in
 pyyaml==6.0.1
     # via
     #   -r ./requirements-unit.in
+    #   -r ./requirements.txt
     #   lightkube
     #   ops
     #   serialized-data-interface
 requests==2.31.0
-    # via serialized-data-interface
+    # via
+    #   -r ./requirements.txt
+    #   serialized-data-interface
 ruamel-yaml==0.17.32
-    # via charmed-kubeflow-chisme
+    # via
+    #   -r ./requirements.txt
+    #   charmed-kubeflow-chisme
 ruamel-yaml-clib==0.2.7
-    # via ruamel-yaml
+    # via
+    #   -r ./requirements.txt
+    #   ruamel-yaml
 serialized-data-interface==0.7.0
-    # via -r ./requirements.in
+    # via -r ./requirements.txt
 sniffio==1.3.0
     # via
+    #   -r ./requirements.txt
     #   anyio
     #   httpcore
     #   httpx
 tenacity==8.2.2
-    # via charmed-kubeflow-chisme
+    # via
+    #   -r ./requirements.txt
+    #   charmed-kubeflow-chisme
 tomli==2.0.1
     # via pytest
 urllib3==2.0.4
-    # via requests
+    # via
+    #   -r ./requirements.txt
+    #   requests
 websocket-client==1.6.1
-    # via ops
+    # via
+    #   -r ./requirements.txt
+    #   ops
 zipp==3.16.2
-    # via importlib-resources
+    # via
+    #   -r ./requirements.txt
+    #   importlib-resources
