build: install bcrypt from binary and pin its version <4.1
Recently, this package's dependencies introduced a dependency on rustc, a toolchain
that is not installed in the charm by default, which can cause trouble when installing
(building and installing) bcrypt from source during the charmcraft pack.
Also pinning bcrypt to <4.1 to keep some sort of control over the version used.

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -12,4 +12,8 @@ bases:
 parts:
   charm:
     charm-python-packages: [setuptools, pip]
-    charm-binary-python-packages: [bcrypt]
+    # Installing bcrypt from binary prevents us from having to build
+    # this package from source, as recently one of this package dependencies
+    # requires rustc a toolchain that is not installed by default in our charms.
+    # Pinning this package to <4.1 to have some sort of control over the versions.
+    charm-binary-python-packages: [bcrypt<4.1]
