Add logging relation
Added logging relation and cos integration tests from chisme.

fixes: #194

--- a/requirements-integration.in
+++ b/requirements-integration.in
@@ -10,3 +10,5 @@ requests
 selenium<4.11
 selenium-wire
 tenacity
+# This is required due to the abstraction of cos integration
+charmed-kubeflow-chisme>=0.4.0
