--- a/metadata.yaml
+++ b/metadata.yaml
@@ -73,6 +73,9 @@ requires:
           - prefix
     versions: [v1]
     __schema_source: https://raw.githubusercontent.com/canonical/operator-schemas/master/ingress.yaml
+  logging:
+    interface: loki_push_api
+    optional: true
 provides:
   metrics-endpoint:
     interface: prometheus_scrape
