--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -9,6 +9,9 @@ bases:
     run-on:
     - name: "ubuntu"
       channel: "20.04"
+charm-libs:
+  - lib: traefik_k8s.ingress
+    version: "2"
 parts:
   charm:
     charm-python-packages: [setuptools, pip]
